<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fcih.furniturego.LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:indeterminate="false"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/main_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginBottom="40dp"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/email_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TabHost
                android:id="@+id/tabHost"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <FrameLayout
                        android:id="@android:id/tabcontent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/Signin"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <AutoCompleteTextView
                                    android:id="@+id/login_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_email"
                                    android:inputType="textEmailAddress"
                                    android:maxLength="25"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/login_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_password"
                                    android:imeActionId="@+id/login"
                                    android:imeActionLabel="@string/action_sign_in_short"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textPassword"
                                    android:maxLength="25"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/email_login_Button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/action_sign_in"
                                android:textStyle="bold" />

                            <android.support.v7.widget.AppCompatTextView
                                android:id="@+id/password_forget"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:autoLink="all"
                                android:clickable="true"
                                android:text="Foreget Password"
                                android:textColorLink="@color/colorPrimaryDark"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/SignUp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/register_Name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="User Name"
                                    android:inputType="textPersonName"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <AutoCompleteTextView
                                    android:id="@+id/register_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_email"
                                    android:inputType="textEmailAddress"
                                    android:maxLength="25"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/register_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/prompt_password"
                                    android:imeActionId="@+id/register"
                                    android:imeActionLabel="Sign up"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textPassword"
                                    android:maxLength="25"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <android.support.v7.widget.AppCompatEditText
                                    android:id="@+id/register_confirm_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="Confirm Password"
                                    android:imeActionId="@+id/register"
                                    android:imeActionLabel="Sign up"
                                    android:imeOptions="actionUnspecified"
                                    android:inputType="textPassword"
                                    android:maxLength="25"
                                    android:maxLines="1" />

                            </android.support.design.widget.TextInputLayout>

                            <android.support.v7.widget.AppCompatButton
                                android:id="@+id/email_register_Button"
                                style="?android:textAppearanceSmall"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="Sign up"
                                android:textStyle="bold" />

                        </LinearLayout>

                    </FrameLayout>
                </LinearLayout>
            </TabHost>

            <com.facebook.login.widget.LoginButton
                android:id="@+id/Facebook_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/Google_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="-5dp"
                android:layout_marginRight="-5dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
